# CV-SISR-2026

./: .gitignore  README.md  infer.py  infer.sh  main.py  patch.py  pyproject.toml  requirements.txt  test.py  test.sh  train.py  train.sh
configs/: edsr_x2.yaml  edsr_x3.yaml  edsr_x4.yaml  espcn_x2.yaml  espcn_x3.yaml  espcn_x4.yaml  fsrcnn_x2.yaml  fsrcnn_x3.yaml  fsrcnn_x4.yaml  imdn_x2.yaml  imdn_x3.yaml  imdn_x4.yaml  srcnn_x2.yaml  srcnn_x3.yaml  srcnn_x4.yaml
core/: __init__.py  checkpoint.py  config.py  evaluator.py  inferencer.py  trainer.py
data/: __init__.py  dataset.py
demo/edsr_x2/: metrics.json
demo/espcn_x2/: metrics.json
demo/srcnn_x2/: metrics.json
docs/: REFACTORING_GUIDE.md
experiments/srcnn_x3/: best.pt
models/: __init__.py
output/espcn_x2/: best.pt
output/espcn_x3/: best.pt
output/espcn_x4/: best.pt
output/srcnn_x2/: best.pt
output/srcnn_x4/: best.pt
scripts/: infer.sh  test.sh  train.sh
utils/: __init__.py
wandb/: latest-run
wandb/latest-run/: run-c7335lb6.wandb
wandb/run-20260413_195609-ky64eir1/: run-ky64eir1.wandb
wandb/run-20260413_200124-s9adrpm8/: run-s9adrpm8.wandb
wandb/run-20260413_214255-wn3y6wpm/: run-wn3y6wpm.wandb
wandb/run-20260413_234014-rp2x0ltt/: run-rp2x0ltt.wandb
wandb/run-20260414_105717-3gq2tmgk/: run-3gq2tmgk.wandb
wandb/run-20260414_110801-l5u15hna/: run-l5u15hna.wandb
wandb/run-20260414_110802-ecfy8vom/: run-ecfy8vom.wandb
wandb/run-20260414_185938-2ccprpwv/: run-2ccprpwv.wandb
wandb/run-20260414_185938-vw2lphhx/: run-vw2lphhx.wandb
(+35 files in other folders)
